tests/bad/testfile-duplicate-1.go
package main
type T struct { 
	x int
	x int 
}
func main() {}
